[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["李辉 <lihui@nxin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
md5="0.7"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true